# UrbanBloom

./: .env  .gitignore  Metro Area Dataset - Income by Metro Area.csv  Metro Area Dataset - Overall U.S. Demographics.csv  Metro Area Dataset - Overall U.S. Income.csv  README.md  pyproject.toml  urbanbloom.py  urbanbloom_exploring_and_visualization.ipynb
common/: README.md
datasets/: Metro Area Dataset - Data Sources.csv  Metro Area Dataset - Demographics by Metro Area.csv  Metro Area Dataset - Income by Metro Area.csv  Metro Area Dataset - MAP - Metro to State.csv  Metro Area Dataset - MAP - Metro to ZIP Code.csv  Metro Area Dataset - MAP - Town to Metro.csv  Metro Area Dataset - Population Change by Metro Area.csv
example/: README.md  example1.py  example2.py  example3.py
example-1/: pyproject.toml
lib/: dataset_ops.py  file_ops.py
