[tool.poetry]
name = "urbanbloom"
version = "0.1.0"
description = "A ranking model for metropolitan area attractiveness"
authors = [
    "Steven Kotwal <stevenkotwal@ufl.edu>",
    "Nathan McTear <nmctear@ufl.edu>",
    "Luke Kutz-Pears <lukekutzpears@ufl.edu>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
